# controllers/company.js
@@ -1,0 +1,100 @@
+const mongodb = require('../db/connect');
+const ObjectId = require('mongodb').ObjectId;
+ 
+ // Companies Collection Functions
+ const getAllCompanies =  (req, res) => {
+  mongodb
+  .getDB()
+  .db('new-project')
+  .collection('companies')
+  .find()
+  .toArray((err, lists) => {
+   if (err) {
+     res.status(400).json({message: err});
+   }
+   res.setHeader('Content-Type', 'application/json');
+   res.status(200).json(lists);
+  });
+ };
+ 
+ const getSingleCompany =  (req, res) => {
+   if (!ObjectId.isValid(req.params.id)) {
+     res.status(400).json('Must use a valid contact id to find a contact. ');
+   }
+   const userId = new ObjectId(req.params.id);
+   mongodb
+   .getDB()
+   .db('new-project')
+   .collection('companies')
+   .find({_id: userId})
+   .toArray((err, result) => {
+    if (err) {
+      res.status(400).json({message: err});
+    }
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(result[0]);
+   });
+  };
+ 
+ const createNewCompany = async (req, res) => {
+   const contact = {
+     companyName: req.body.companyName,
+     companyFounder: req.body.companyFounder,
+     companyHeadquarters: req.body.companyHeadquarters,
+     companyFoundationDate: req.body.companyFoundationDate,
+     companyCEO: req.body.companyCEO
+
+   };
+   const response = await mongodb.getDB().db('new-project').collection('companies').insertOne(contact);
+   if (response.acknowledged) {
+     res.status(201).json(response);
+   } else {
+     res.status(500).json(response.error || 'Some error occurred while creating the contact.');
+   }
+ };
+ 
+ const updateExistingCompany = async (req, res) => {
+   if (!ObjectId.isValid(req.params.id)) {
+     res.status(400).json('Must use a valid contact id to update a contact. ');
+   }
+   const userId = new ObjectId(req.params.id);
+   // be aware of updateOne if you only want to update specific fields
+   const contact = {
+     companyName: req.body.companyName,
+     companyFounder: req.body.companyFounder,
+     companyHeadquarters: req.body.companyHeadquarters,
+     companyFoundationDate: req.body.companyFoundationDate,
+     companyCEO: req.body.companyCEO
+
+
+   };
+   const response = await mongodb
+     .getDB()
+     .db('new-project')
+     .collection('companies')
+     .replaceOne({ _id: userId }, contact);
+   console.log(response);
+   if (response.modifiedCount > 0) {
+     res.status(204).send();
+   } else {
+     res.status(500).json(response.error || 'Some error occurred while updating the contact.');
+   }
+ };
+ 
+ const deleteSomeCompany = async (req, res) => {
+   if (!ObjectId.isValid(req.params.id)) {
+     res.status(400).json('Must use a valid contact id to delete a contact. ');
+   }
+   const userId = new ObjectId(req.params.id);
+   const response = await mongodb.getDB().db('new-project').collection('companies').deleteOne({ _id: userId }, true);
+   console.log(response);
+   if (response.deletedCount > 0) {
+     res.status(204).send();
+   } else {
+     res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
+   }
+ };
+
+ module.exports = {
+  getAllCompanies, getSingleCompany, createNewCompany, updateExistingCompany, deleteSomeCompany
+ }
