# routes/index.js
@@ -3,5 +3,11 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/project', require('./project'));
+router.use('/user', require('./user'));
+router.use('/client', require('./client'));
+router.use('/company', require('./company'));
+
+
+
 
 module.exports = router;
